20080228
 - (dtucker) [configure.ac] Add -fstack-protector to LDFLAGS too, fixes
   linking problems on AIX with gcc 4.1.x.
 - (dtucker) [includes.h ssh-add.c ssh-agent.c ssh-keygen.c ssh.c sshd.c
   openbsd-compat/openssl-compat.{c,h}] Bug #1437 Move the OpenSSL compat
   header to after OpenSSL headers, since some versions of OpenSSL have
   SSLeay_add_all_algorithms as a macro already.

20080225
 - (dtucker) [openbsd-compat/fake-rfc2553.h] rename ssh_gai_strerror hack
   since it now conflicts with the helper function in misc.c.  From
   vinschen AT redhat.com.
 - (dtucker) [configure.ac audit-bsm.c] Bug #1420: Add a local implementation
   of aug_get_machine for systems that don't have their own (eg OS X, FreeBSD).
   Help and testing from csjp at FreeBSD org, vgiffin at apple com.  ok djm@
 - (dtucker) [includes.h openbsd-compat/openssl-compat.c] Bug #1437: reshuffle
   headers so ./configure --with-ssl-engine actually works.  Patch from
   Ian Lister.

20080224
 - (tim) [contrib/cygwin/ssh-host-config]
   Grammar changes on SYSCONFDIR LOCALSTATEDIR messages.
   Check more thoroughly that it's possible to create the /var/empty directory.
   Patch by vinschen AT redhat.com

20080210
 - OpenBSD CVS Sync
   - chl@cvs.openbsd.org 2008/01/11 07:22:28
     [sftp-client.c sftp-client.h]
     disable unused functions
     initially from tobias@, but disabled them by placing them in
     "#ifdef notyet" which was asked by djm@
     ok djm@ tobias@
   - djm@cvs.openbsd.org 2008/01/19 19:13:28
     [ssh.1]
     satisfy the pedants: -q does not suppress all diagnostic messages (e.g.
     some commandline parsing warnings go unconditionally to stdout).
   - djm@cvs.openbsd.org 2008/01/19 20:48:53
     [clientloop.c]
     fd leak on session multiplexing error path. Report and patch from
     gregory_shively AT fanniemae.com
   - djm@cvs.openbsd.org 2008/01/19 20:51:26
     [ssh.c]
     ignore SIGPIPE in multiplex client mode - we can receive this if the