@@ -5,6 +5,8 @@
    openbsd-compat/openssl-compat.{c,h}] Bug #1437 Move the OpenSSL compat
    header to after OpenSSL headers, since some versions of OpenSSL have
    SSLeay_add_all_algorithms as a macro already.
+ - (dtucker) [key.c defines.h openbsd-compat/openssl-compat.h] Move old OpenSSL
+   compat glue into openssl-compat.h.
 
 20080225
  - (dtucker) [openbsd-compat/fake-rfc2553.h] rename ssh_gai_strerror hack
@@ -3635,4 +3637,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4843 2008/02/28 08:13:52 dtucker Exp $
+$Id: ChangeLog,v 1.4844 2008/02/28 08:22:04 dtucker Exp $
